openshift/base/picalc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picalc
  namespace: picalc-1 
  ## for argo-notifications: wrong ns to provoke sync-failed   
  ## (you have to terminate the unsuccessful sync or wait until it's cancelled, before failure is reported) 
  labels:
    app: picalc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: picalc
  template:
    metadata:
      labels:
        app: picalc
        test: "DRV-27"
    spec:
      containers:
      - name: picalc
        image: gcr.io/cluster-01-271319/picalc:1.0
        ports:
        - name: http-server
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 50M
          limits:
            cpu: 200m
            memory: 80M
        readinessProbe:
          exec:
            command: ["/bin/sh","-c","cat /proc/1/status"]
          initialDelaySeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: picalc
  labels:
    app: picalc
    foo: bar
spec:
#  externalIPs:
#  - 192.168.99.77
  ports:
  - port: 8080
    targetPort: http-server
  selector:
    app: picalc
  type: LoadBalancer
